WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171482
Regression (
r215941
) Unexpected logging causes perf tests to fail
https://bugs.webkit.org/show_bug.cgi?id=171482
Summary
Regression (r215941) Unexpected logging causes perf tests to fail
Brady Eidson
Reported
2017-04-29 22:02:23 PDT
Regression (
r215941
) Unexpected logging causes perf tests to fail
Attachments
Patch
(4.74 KB, patch)
2017-04-29 22:06 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-04-29 22:02:52 PDT
<
rdar://problem/31907269
>
Radar WebKit Bug Importer
Comment 2
2017-04-29 22:02:53 PDT
<
rdar://problem/31907270
>
Brady Eidson
Comment 3
2017-04-29 22:06:43 PDT
Created
attachment 308684
[details]
Patch
WebKit Commit Bot
Comment 4
2017-04-30 00:21:26 PDT
Comment on
attachment 308684
[details]
Patch Clearing flags on attachment: 308684 Committed
r215983
: <
http://trac.webkit.org/changeset/215983
>
WebKit Commit Bot
Comment 5
2017-04-30 00:21:27 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6
2017-05-01 14:44:49 PDT
(In reply to WebKit Commit Bot from
comment #4
)
> Comment on
attachment 308684
[details]
> Patch > > Clearing flags on attachment: 308684 > > Committed
r215983
: <
http://trac.webkit.org/changeset/215983
>
It appears that perf tests are still failing after this change: 2017-05-01 13:53:04.797 WebKitTestRunner[24779:798669] could not create directory "" for future sandbox extension, error Error Domain=NSCocoaErrorDomain Code=512 "The file “” couldn’t be saved." UserInfo={NSFilePath=}
https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK2%20(Perf)/builds/319
Brady Eidson
Comment 7
2017-05-01 15:41:06 PDT
(In reply to Ryan Haddad from
comment #6
)
> (In reply to WebKit Commit Bot from
comment #4
) > > Comment on
attachment 308684
[details]
> > Patch > > > > Clearing flags on attachment: 308684 > > > > Committed
r215983
: <
http://trac.webkit.org/changeset/215983
> > > It appears that perf tests are still failing after this change: > > 2017-05-01 13:53:04.797 WebKitTestRunner[24779:798669] could not create > directory "" for future sandbox extension, error Error > Domain=NSCocoaErrorDomain Code=512 "The file “” couldn’t be saved." > UserInfo={NSFilePath=} > >
https://build.webkit.org/builders/
> Apple%20El%20Capitan%20Release%20WK2%20(Perf)/builds/319
hmmmm based on code inspection that's quite surprising. Will have to run locally with more logging to explore.
Brady Eidson
Comment 8
2017-05-01 15:57:33 PDT
(In reply to Brady Eidson from
comment #7
)
> (In reply to Ryan Haddad from
comment #6
) > > (In reply to WebKit Commit Bot from
comment #4
) > > > Comment on
attachment 308684
[details]
> > > Patch > > > > > > Clearing flags on attachment: 308684 > > > > > > Committed
r215983
: <
http://trac.webkit.org/changeset/215983
> > > > > It appears that perf tests are still failing after this change: > > > > 2017-05-01 13:53:04.797 WebKitTestRunner[24779:798669] could not create > > directory "" for future sandbox extension, error Error > > Domain=NSCocoaErrorDomain Code=512 "The file “” couldn’t be saved." > > UserInfo={NSFilePath=} > > > >
https://build.webkit.org/builders/
> > Apple%20El%20Capitan%20Release%20WK2%20(Perf)/builds/319 > > hmmmm based on code inspection that's quite surprising. > > Will have to run locally with more logging to explore.
So far I've determined it's *not* my original cookie file change that's doing this. Huh
Brady Eidson
Comment 9
2017-05-01 16:05:57 PDT
(In reply to Brady Eidson from
comment #8
)
> (In reply to Brady Eidson from
comment #7
) > > (In reply to Ryan Haddad from
comment #6
) > > > (In reply to WebKit Commit Bot from
comment #4
) > > > > Comment on
attachment 308684
[details]
> > > > Patch > > > > > > > > Clearing flags on attachment: 308684 > > > > > > > > Committed
r215983
: <
http://trac.webkit.org/changeset/215983
> > > > > > > It appears that perf tests are still failing after this change: > > > > > > 2017-05-01 13:53:04.797 WebKitTestRunner[24779:798669] could not create > > > directory "" for future sandbox extension, error Error > > > Domain=NSCocoaErrorDomain Code=512 "The file “” couldn’t be saved." > > > UserInfo={NSFilePath=} > > > > > >
https://build.webkit.org/builders/
> > > Apple%20El%20Capitan%20Release%20WK2%20(Perf)/builds/319 > > > > hmmmm based on code inspection that's quite surprising. > > > > Will have to run locally with more logging to explore. > > So far I've determined it's *not* my original cookie file change that's > doing this. Huh
Fallout from my later IndexedDB change! Hah!
Brady Eidson
Comment 10
2017-05-01 16:11:55 PDT
Following up in
https://bugs.webkit.org/show_bug.cgi?id=171522
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug