Regression (r215941) Unexpected logging causes perf tests to fail. <rdar://problem/31907269> and https://bugs.webkit.org/show_bug.cgi?id=171482

Reviewed by Alexey Proskuryakov.

* Shared/mac/SandboxExtensionMac.mm:
(WebKit::resolveAndCreateReadWriteDirectoryForSandboxExtension):

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::networkingCachesDirectory):
(WebKit::WebProcessPool::webContentCachesDirectory):

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::resolveDirectoriesIfNecessary): Only resolve the cookie storage directory
  if a custom one has been set.


Canonical link: https://commits.webkit.org/188374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215983 268f45cc-cd09-0410-ab3c-d52691b4dbfc